[package]
name = "thistle"
version = "0.1.0"
authors = ["Brad Windsor <bwindsor22@gmail.com>", "Kevin Choi <kc2296@nyu.edu>"]
edition = "2018"
default-run = "thistle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
rust-bert = "0.6.2"
rust_tokenizers = "2.0.4"
tch = "0.1.6"
serde_json = "1.0.45"
serde = {version = "1.0.104", features = ["derive"]}
failure = "0.1.6"
log = "0.4.8"
dirs = "2.0.2"
ndarray = {version = "0.13", features=["serde", "rayon"]}
blas-src = { version = "0.6", defeault-features = false, optional = true}
rand = {version = "^0.7", features = ["small_rng"]}
rand_distr = "^0.2"
fnv = "^1.0.6"
ndarray-rand = "^0.11.0"
bincode = "^1.2.1"
statrs = "^0.12.0"
rayon = "^1.3.0"
rusqlite = {version = "^0.21.0", features = ["bundled", "backup"], optional = true }
thiserror = "1.0.13"
anyhow = "^1.0.27"
itertools = "^0.9.0"
num = "^0.2.1"



[lib]
name = "thistle"
path = "src/lib.rs"

[[bin]]
name = "convert-tensor"
path = "src/bin/convert-tensor.rs"
doc = false